--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -3,3 +3,25 @@
   flex-direction: column;
   flex: 0.35;
 }
+
+
+.sidebar_header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-right: 1px solid lightgray;
+}
+
+.sidebar_headerRight {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 10vw;
+}
+
+.sidebar_headerRight > .MuiSvgIcon-Root {
+
+  margin-right: 2vw;
+  font-size: 24px !important;
+
+}
