--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -3,3 +3,62 @@
   flex-direction: column;
   flex: 0.65;
 }
+
+
+.chat-header {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  border: 1px solid lightgray;
+}
+
+.chat-headerInfo {
+  flex: 1;
+  padding-left: 20px;
+}
+
+.chat-headerInfo > h3 {
+  margin-bottom: 3px;
+  font-weight: 500;
+}
+
+.chat-headerInfo > p {
+  color: gray;
+}
+
+.chat-body { 
+  flex: 1;
+  background: rgb(228, 222, 222);
+  /* background-position: center;
+  background-repeat: no-repeat; */
+  padding: 30px;
+  overflow: scroll;
+}
+
+.chat-message {
+  position: relative;
+  font-size: 16px;
+  padding: 10px;
+  width: fit-content;
+  border-radius: 10px;
+  background-color: white;
+  margin-bottom: 30px;
+}
+
+.chat-reciever {
+margin-left: auto;
+background-color: #dcf8c6;
+}
+
+
+.chat-timestamp {
+  font-size: xx-small;
+  margin-left: 10px;
+}
+
+.chat-name {
+  position: absolute;
+  top: -15px;
+  font-weight: 800;
+  font-size: xx-small;
+}
