--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -19,9 +19,43 @@
   min-width: 10vw;
 }
 
-.sidebar_headerRight > .MuiSvgIcon-Root {
+.sidebar_headerRight > .MuiSvgIcon-root {
 
   margin-right: 2vw;
   font-size: 24px !important;
 
+}
+
+.sidebar-search {
+  display: flex;
+  align-items: center;
+  background: #f6f6f6;
+  height: 39px;
+  padding: 10px;
+}
+
+.sidebar-searchContainer {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  height: 35px;
+  border-radius: 20px;
+}
+
+.sidebar-searchContainer > .MuiSvgIcon-root {
+  color: gray;
+  padding: 10px;
+}
+
+.sidebar-searchContainer > input {
+  border: none;
+  margin-left: 10px;
+  outline-width: 0;
+}
+
+.sidebar-chats {
+  flex: 1;
+  background-color: white;
+  overflow: scroll;
 }
