--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -4,7 +4,6 @@
   flex: 0.65;
 }
 
-
 .chat-header {
   padding: 20px;
   display: flex;
@@ -26,7 +25,7 @@
   color: gray;
 }
 
-.chat-body { 
+.chat-body {
   flex: 1;
   background: rgb(228, 222, 222);
   /* background-position: center;
@@ -45,11 +44,10 @@
   margin-bottom: 30px;
 }
 
-.chat-reciever {
-margin-left: auto;
-background-color: #dcf8c6;
+.chat-receiver {
+  margin-left: auto;
+  background-color: #dcf8c6;
 }
-
 
 .chat-timestamp {
   font-size: xx-small;
@@ -82,13 +80,10 @@ background-color: #dcf8c6;
   padding: 10px;
   border: none;
   outline-width: 0;
-
 }
-
 
 .chat-footer > form > button {
   display: none;
-  
 }
 
 .chat-footer > .MuiSvgIcon-root {
